version/0.12/_sources/api/solver/_autosummary/settings/multiphase.rst.txt
:orphan:

.. _multiphase:

multiphase
==========

.. currentmodule:: ansys.fluent.core.solver.settings_231.multiphase

.. autoclass:: multiphase
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==============================================================================   ========================================================================

Child                                                                                                                                             Summary

==============================================================================   ========================================================================
:ref:`models <models>`                                                                                                          Specify multiphase model.

:ref:`vaporization_pressure <vaporization_pressure>`                                                                           Set vaporization pressure.

:ref:`non_condensable_gas <non_condensable_gas>`                                                                                 Set non condensable gas.

:ref:`liquid_surface_tension <liquid_surface_tension>`                                                                        Set liquid surface tension.

:ref:`bubble_number_density <bubble_number_density>`                                                                           Set bubble number density.

:ref:`number_of_phases <number_of_phases>`                                                                                                >= 2 and <= 20.

:ref:`number_of_eulerian_discrete_phases <number_of_eulerian_discrete_phases>`       Sets the number of phases, calculated with the Discrete Phase model.

==============================================================================   ========================================================================

.. rubric:: Included in:

========================   ===================

Parent                                 Summary

========================   ===================
:ref:`models <models_1>`       'models' child.

========================   ===================

