version/0.27/_sources/api/solver/_autosummary/settings/multiphase.rst.txt
:orphan:

.. _multiphase:

multiphase
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.multiphase
    :show-inheritance:

.. rubric:: Attributes

==============================================================================   ========================================================================

Attribute                                                                                                                                         Summary

==============================================================================   ========================================================================
:ref:`models <models_1>`                                                                                                        Specify multiphase model.

:ref:`vaporization_pressure <vaporization_pressure>`                                                                           Set vaporization pressure.

:ref:`non_condensable_gas <non_condensable_gas>`                                                                                 Set non condensable gas.

:ref:`liquid_surface_tension <liquid_surface_tension>`                                                                        Set liquid surface tension.

:ref:`bubble_number_density <bubble_number_density>`                                                                           Set bubble number density.

:ref:`hybrid_models <hybrid_models>`                                                                                                       Hybrid models.

:ref:`number_of_phases <number_of_phases>`                                                                                     Number of phases settings.

:ref:`number_of_eulerian_discrete_phases <number_of_eulerian_discrete_phases>`       Sets the number of phases, calculated with the Discrete Phase model.

:ref:`vof_sub_models <vof_sub_models>`                                                                                                 Set vof sub model.

:ref:`vof_parameters <vof_parameters>`                                                                                                    VOF Parameters.

:ref:`advanced_formulation <advanced_formulation>`                                                                            Set body force formulation.

:ref:`phases <phases>`                                                                                                                   Group of phases.

:ref:`phase_interaction <phase_interaction>`                                                                                   Specify phase interaction.

:ref:`wet_steam_settings <wet_steam_settings>`                                                                   Adjust settings for the wet steam model.

:ref:`wet_steam_enabled <wet_steam_enabled>`                                                                          Enable/disable the wet steam model.

==============================================================================   ========================================================================

.. rubric:: Included in:

======================   ===================

Parent                               Summary

======================   ===================
:ref:`models <models>`       'models' child.

======================   ===================

